-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.1
-
-
8432c4716c712a2414c147d3e04ebcbe7d6b454f (qt/qtconnectivity/6.2)
When run in debug build, QBluetoothDevice occasionally asserts during device discovery.
Reproduce rate is low and may be hardware/software drivers related. This issue can be reproduced with Qt low energy scanner example, by simply starting to scan for devices.
Stack trace:
1 winrt::impl::check_sta_blocking_wait Windows.Foundation.h 2942 0x7fffd4a4a07c
2 winrt::impl::wait_get<winrt::Windows::Foundation::IAsyncOperation<winrt::Windows::Devices::Bluetooth::BluetoothLEDevice>> Windows.Foundation.h 2972 0x7fffd4a44018
3 winrt::impl::consume_Windows_Foundation_IAsyncOperation<winrt::Windows::Foundation::IAsyncOperation<winrt::Windows::Devices::Bluetooth::BluetoothLEDevice>,winrt::Windows::Devices::Bluetooth::BluetoothLEDevice>::get Windows.Foundation.0.h 1053 0x7fffd4a4a732
4 QBluetoothLocalDevice::pairingStatus qbluetoothlocaldevice_winrt.cpp 116 0x7fffd4a41264
5 QWinRTLowEnergyConnectionHandler::connectToDevice qlowenergycontroller_winrt.cpp 481 0x7fffd4a9aae7
6 QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<;>,void,void (__cdecl QWinRTLowEnergyConnectionHandler:: *)(void)>::callqobjectdefs_impl.h 152 0x7fffd4ac1381
7 QtPrivate::FunctionPointer<void (__cdeclQWinRTLowEnergyConnectionHandler::*)(void)>::call<QtPrivate::List<>,void> qobjectdefs_impl.h 186 0x7fffd4aaa08c
8 QtPrivate::QSlotObject<void (__cdecl QWinRTLowEnergyConnectionHandler::*)(void),QtPrivate::List<>,void>::implqobjectdefs_impl.h 396 0x7fffd4ac2ff5
9 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 375 0x7fffcfa482d7
10 doActivate<0> qobject.cpp 3904 0x7fffcfafaf06
11 QMetaObject::activate qobject.cpp 3965 0x7fffcfae300c
12 QThread::started moc_qthread.cpp 175 0x7fffcfc9d753
13 QThreadPrivate::start qthread_win.cpp 331 0x7fffcfe628be
14 BaseThreadInitThunk KERNEL32 0x7ff84b427034
15 RtlUserThreadStart ntdll 0x7ff84b562651
For Gerrit Dashboard: QTBUG-98005 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
380399,2 | Windows: fix assert in debug build | 6.2 | qt/qtconnectivity | Status: MERGED | +2 | 0 |