Windows: fix assert in debug build

Debug builds of QtBluetooth on Windows were throwing asserts when
requesting a bluetooth device by its address, because we did it in a
blocking way on a GUI thread.
This patch is a partial cherry-pick of
457fd75468f56c0582f3128510e95f9bf2fc9ac3. It introduces an asynchronous
way to request a Bluetooth(LE) device.

Fixes: QTBUG-98005
Change-Id: I027607ffa32bdc1a3c77484a46833cf7ead09c77
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>